# crawler-user-agents

./: .gitignore  pyproject.toml  test_harness.py  test_validation.py  validate.py
.github/workflows/: ci-validation.yml
crawleruseragents/: __init__.py  crawler-user-agents.json
