[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "crawler-user-agents"
version = "0.1"
requires-python = ">=3.8"

authors = [
  { name="Martin Monperrus", email="martin.monperrus@gnieh.org" },
]

readme = "README.md"

[project.optional-dependencies]
dev = [
  "attrs==23.2.0",
  "iniconfig==2.0.0",
  "jsonschema==4.22.0",
  "jsonschema-specifications==2023.12.1",
  "mypy==1.11.2",
  "mypy-extensions==1.0.0",
  "packaging==24.0",
  "pluggy==1.5.0",
  "pytest==8.2.0",
  "referencing==0.35.0",
  "rpds-py==0.18.0",
  "ruff==0.6.4",
  "types-jsonschema==4.23.0.20240813",
  "typing-extensions==4.12.2",
]

[project.urls]
Homepage = "https://github.com/monperrus/crawler-user-agents"

[tool.setuptools]
packages = ["crawleruseragents"]
